--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,9 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.initialization-mode=always
+logging.level.org.hibernate.SQL=DEBUG
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:mem:testdb
 
 ## Hibernate Logging
 spring.jpa.show-sql=false
@@ -31,3 +34,17 @@ spring.jackson.time-zone= UTC
 ## App Properties
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
+
+# mail sender config
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.protocol=stmp
+spring.mail.username=amoulanfe.officiel
+spring.mail.password=*Amoulanfe$2019
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+logging.level.org.springframework.web=DEBUG
