--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,20 @@ spring.jackson.time-zone= UTC
 ## App Properties
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
+
+
+## TÉLÉCHARGEMENT DE DOCUMENTS
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+
+# SEUIL APRÈS ECRITURE DANS LE DISQUE
+spring.servlet.multipart.file-size-threshold=2KB
+
+# TAILLE MAXIMALE DE FICHIERS
+spring.servlet.multipart.max-file-size=200MB
+# TAILLE MAXIMALE DES REQUETES
+spring.servlet.multipart.max-request-size=215MB
+
+## File Storage Properties
+# DEFINITION DU REPERTOIRE DE STOCKAGE DES FICHIERS
+#file.upload-dir=/Users/callicoder/uploads
