--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,4 +47,4 @@ spring.servlet.multipart.max-request-size=215MB
 
 ## File Storage Properties
 # DEFINITION DU REPERTOIRE DE STOCKAGE DES FICHIERS
-#file.upload-dir=/Users/callicoder/uploads
+file-storage.upload-dir=UPLOAD-FILES
