send mail by smtp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,7 +54,7 @@ file-storage.upload-dir=UPLOAD-FILES
 # mail sender config
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.protocol=stmp
+spring.mail.protocol=smtp
 spring.mail.username=amoulanfe.officiel
 spring.mail.password=*Amoulanfe$2019
 spring.mail.properties.mail.smtp.starttls.enable=true
