--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,13 +16,19 @@ java.runtime.version=10
 # H2 Database (database name: testdb)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.initialization-mode=always
 logging.level.org.hibernate.SQL=DEBUG
 spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:mem:testdb
+
+#Mysql Database
+spring.datasource.url=jdbc:mysql://localhost:3306/amoulanfe?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 ## Hibernate Logging
 spring.jpa.show-sql=false
