Update jdbc config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 #spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.initialization-mode=always
 logging.level.org.hibernate.SQL=DEBUG
 spring.datasource.platform=h2
@@ -30,8 +30,22 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+#Specify the DBMS (type de db)
+spring.jpa.database=MYSQL
+
+#show or not log for each sql query (afficher les requettes sql pendant l'execution)
+spring.jpa.show-sql = true
+
+#hibernate ddl auto (create, create-drop, update)
+#generer une bd si elle n'est pas creer
+spring.jpa.hibernate.ddl-auto=update
+
+#naming strategy (strategie de nommage des tables si elles ne sont pas nommées)
+spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
+
+
 ## Hibernate Logging
-spring.jpa.show-sql=false
+#spring.jpa.show-sql=false
 
 ## Jackson Properties
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
