update hibernate properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,9 +36,10 @@ spring.jpa.database=MYSQL
 #show or not log for each sql query (afficher les requettes sql pendant l'execution)
 spring.jpa.show-sql = true
 
-#hibernate ddl auto (create, create-drop, update)
+#hibernate ddl auto (create, create-drop, validate, update)
 #generer une bd si elle n'est pas creer
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.hbm2ddl.auto=update
 
 #naming strategy (strategie de nommage des tables si elles ne sont pas nommées)
 spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
