--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,12 @@
             <artifactId>spring-boot-starter-mail</artifactId>
             <version>2.2.6.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.twilio.sdk</groupId>
+            <artifactId>twilio</artifactId>
+            <version>7.49.1</version>
+        </dependency>
     </dependencies>
 
     <build>
