logout current user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,8 +53,8 @@ spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
 spring.jackson.time-zone= UTC
 
 ## App Properties
-app.jwtSecret= JWTSuperSecretKey
-app.jwtExpirationInMs = 604800000
+app.jwtSecret= .AfenayeFoussePetitTo$
+app.jwtExpirationInMs = 7200000
 
 ## TÉLÉCHARGEMENT DE DOCUMENTS
 # Enable multipart uploads
