--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -84,4 +84,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
+
 logging.level.org.springframework.web=DEBUG
+spring.http.log-request-details=true
+spring.mvc.dispatch-options-request=true
