--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.datasource.platform=h2
 #spring.datasource.url=jdbc:h2:mem:testdb
 
 #Mysql Database
-spring.datasource.url=jdbc:mysql://localhost:3306/amoulanfe?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/amoulanfe?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
