--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # App
-server.port= 8000
+server.port= 9999
 
 java.runtime.version=10
 
 # PostgreSQL Database
 #spring.datasource.url=jdbc:postgresql://localhost:5432/demo1
-#spring.datasource.username=rmitula
+#spring.datasource.username=abdou
 #spring.datasource.password=password
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -25,7 +25,7 @@ spring.datasource.platform=h2
 #spring.datasource.url=jdbc:h2:mem:testdb
 
 #Mysql Database
-spring.datasource.url=jdbc:mysql://localhost:3306/amoulanfe?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/victim?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -77,7 +77,7 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.username=amoulanfe.officiel
-spring.mail.password=*Amoulanfe$2019
+spring.mail.password=Amoulanfe$2019
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
