Reorganize project structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 # App
-server.port= 9999
-
+server.port=9999
 # PostgreSQL Database
 #spring.datasource.url=jdbc:postgresql://localhost:5432/demo1
 #spring.datasource.username=abdou
@@ -10,66 +9,51 @@ server.port= 9999
 #spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 #spring.jpa.hibernate.ddl-auto=create-drop
 #spring.datasource.initialization-mode=always
-
 # H2 Database (database name: testdb)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 #spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.initialization-mode=always
 logging.level.org.hibernate.SQL=DEBUG
 spring.datasource.platform=h2
 #spring.datasource.url=jdbc:h2:mem:testdb
-
 #Mysql Database
 spring.datasource.url=jdbc:mysql://localhost:3306/victim?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
 #Specify the DBMS (type de db)
 spring.jpa.database=MYSQL
-
 #show or not log for each sql query (afficher les requettes sql pendant l'execution)
-spring.jpa.show-sql = true
-
+spring.jpa.show-sql=true
 #hibernate ddl auto (create, create-drop, validate, update)
 #generer une bd si elle n'est pas creer
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.hbm2ddl.auto=update
-
 #naming strategy (strategie de nommage des tables si elles ne sont pas nommées)
 spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
-
-
 ## Hibernate Logging
 #spring.jpa.show-sql=false
-
 ## Jackson Properties
-spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
-spring.jackson.time-zone= UTC
-
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+spring.jackson.time-zone=UTC
 ## App Properties
-app.jwtSecret= .AfenayeFoussePetitTo$
-app.jwtExpirationInMs = 7200000
-
+app.jwtSecret=.AfenayeFoussePetitTo$
+app.jwtExpirationInMs=7200000
 ## TÉLÉCHARGEMENT DE DOCUMENTS
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
-
 # SEUIL APRÈS ECRITURE DANS LE DISQUE
 spring.servlet.multipart.file-size-threshold=2KB
-
 # TAILLE MAXIMALE DE FICHIERS
 spring.servlet.multipart.max-file-size=200MB
 # TAILLE MAXIMALE DES REQUETES
 spring.servlet.multipart.max-request-size=215MB
-
 ## File Storage Properties
 # DEFINITION DU REPERTOIRE DE STOCKAGE DES FICHIERS
 file-storage.upload-dir=UPLOAD-FILES
-
 # mail sender config
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -82,7 +66,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
-
 logging.level.org.springframework.web=DEBUG
 spring.http.log-request-details=true
 spring.mvc.dispatch-options-request=true
